--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ fastapi==0.115.0
 uvicorn[standard]==0.32.0    
 python-multipart==0.0.12    
 
-google-generativeai==0.8.3
+openai>=1.55.0
 
 Pillow==11.0.0    
 moviepy==1.0.3        
